@@ -4,6 +4,11 @@ AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO 
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
 2006/11/22
+	* Modified slaves_inherit_speed and slaves_inherit_mode so you get better
+	  control of when to copy/remove modes/speed. See the conf changelog for
+	  details. [Skotlex]
+	* Reenabled usage of mode MD_CHANGETARGET, so mobs with mode 0x200 will be
+	  able to switch targets while attacking. [Skotlex]
 	* Some cleanups around usage of session[] in the map server, hoping that it
 	  may fix some not very likely crashes. [Skotlex]
 	* Rewrote a few messy @ commands. [Skotlex]
